<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHasil">

    <TextView
        android:id="@+id/txJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tData"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        />

    <TextView
        android:id="@+id/txlabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tEmail"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txJudul"
        app:layout_constraintVertical_bias="0.11"
        />

    <TextView
        android:id="@+id/txIsiEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tXemail"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@id/txlabelEmail"
        app:layout_constraintTop_toBottomOf="@id/txJudul"
        app:layout_constraintVertical_bias="0.11"

        />


    <TextView
        android:id="@+id/txlabelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txlabelEmail"
        app:layout_constraintVertical_bias="0.084"

        />


    <TextView
        android:id="@+id/txIsiPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tXpassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toEndOf="@id/txlabelPassword"
        app:layout_constraintTop_toBottomOf="@id/txIsiEmail"
        app:layout_constraintVertical_bias="0.084"
        />

</androidx.constraintlayout.widget.ConstraintLayout>